[metadata]
name = ipfs-publish
summary = CI-like tool for publishing your static website to IPFS
description-file = README.md
description-content-type = text/markdown
author = Adam Uhlir
author-email = hello@adam-uhlir.me
license = MIT
home-page = https://github.com/AuHau/ipfs-publish
python_requires = >=3.5.0, <3.8.0
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 4 - Beta
    Topic :: Office/Business :: Scheduling
    Intended Audience :: Developers

[files]
packages =
    publish

[entry_points]
console_scripts =
    ipfs-publish = publish.cli:main

[bdist_wheel]
universal = 1
