[metadata]
name = ipfs-publish
summary = CD-like tool for publishing your static website from Git to IPFS
description-file = README.md
description-content-type = text/markdown
author = Adam Uhlir
author-email = adam@uhlir.dev
license = MIT
home-page = https://ipfs-publish.uhlir.dev
project_urls =
    Source = https://github.com/AuHau/ipfs-publish
python_requires = >=3.7.0, <3.9.0
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 4 - Beta
    Intended Audience :: Developers

[files]
packages =
    publish

[entry_points]
console_scripts =
    ipfs-publish = publish.cli:main

[bdist_wheel]
universal = 1
